# AurumBotX

./: .env.example  .env.template  .gitignore  .replit  ANALISI_PRESTAZIONI_SISTEMA.md  AUDIT_COMPLETO_PROGETTO.md  AUDIT_DASHBOARD_REPORT.md  AURUMBOTX_COMPLETE_DOCUMENTATION.md  AURUMBOTX_ENTERPRISE_DOCUMENTATION.md  AurumBotX_Documentation.md  BACKUP_SUMMARY.json  BINANCE_API_INTEGRATION.md  BOOST_TRADING_SUCCESS_REPORT.md  BOT_STATUS_REPORT_LIVE.md  BUG_FIX_3_SQLALCHEMY.md  BUSINESS_PRESENTATION.md  CHANGELOG.md  CHECKUP_PRELIMINARE_COMPLETO.md  DASHBOARD_AUDIT_REPORT.md  DASHBOARD_CONSOLIDATION_REPORT.md  DASHBOARD_TEST_RESULTS.md  DEPLOYMENT_GUIDE_EXTERNAL.md  DEPLOYMENT_READINESS_CHECKLIST.md  Dockerfile  Dockerfile.standalone  EXECUTABLE_SUMMARY.md  FINAL_DELIVERY_REPORT.md  FINAL_PROJECT_STATUS.md  FINAL_PROJECT_SUMMARY.md  GITHUB_PUSH_INSTRUCTIONS.md  GUIDELINES.md  HYPERLIQUID_INTEGRATION_CHECKUP_REPORT.md  INSTALLATION_GUIDE.md  INSTRUCTIONS.md  LIVE_TESTING_SETUP.md  MIGLIORAMENTI_PRESTAZIONI_COMPLETATI.md  MIGRATION_GUIDE.md  MONITORING_REAL_TIME_ATTIVO.md  MULTI_STRATEGY_SUCCESS_REPORT.md  N8N_STATUS_CURRENT.md  (+203 more)
.streamlit/: config.toml
AurumBotX-v2.0-Windows/: APP_DISTRIBUTION_ANALYSIS.md  APP_VERIFICATION_COMPLETE.md  AUTO_UPDATE_SYSTEM_COMPLETE.md  AurumBotX_Launcher.bat  CAPITAL_UPGRADE_50_USDT_COMPLETE.md  GITHUB_BACKUP_READY.md  LINK_CONTROLLO_OFFLINE.md  MAINNET_QUICK_START.md  OBIETTIVO_FINALE_CHIARO.md  PIANO_OTTIMIZZAZIONE_SISTEMA.md  PROIEZIONI_CRESCITA_REALISTICHE.md  README_WINDOWS.md  RISULTATI_BOT_ATTUALI_LIVE.md  RISULTATI_TRADING_ANALISI.md  aurumbotx_gui.py  build_executable.py  deposit_dashboard_web3_fixed.py  setup_mainnet_trading.py  start_50_usdt_challenge.py  start_mainnet_demo.py  test_binance_connection.py  test_security_audit.py  todo.md  update_publisher.py
assets/: style.css
attached_assets/: Pasted--AurumBot-Trading-Strategy-Implementation-import-time-import-random-from-exchange-api-import-E-1739352597831.txt  Pasted-1-Apprendimento-di-Pi-Strategie-con-Machine-Learning-Il-bot-pu-essere-progettato-per-apprendere--1739823010558.txt  Pasted-1-Freqtrade-Freqtrade-is-a-free-and-open-source-crypto-trading-bot-written-in-Python-It-supports--1739236193278.txt  Pasted-Capisco-che-stai-avendo-problemi-con-Streamlit-Per-risolvere-il-problema-prova-questi-passaggi--1739282632706.txt  Pasted-Creare-tre-tipi-di-strategie-di-trading-basate-su-livelli-di-rischio-e-potenza-con-l-obiettivo-di-m-1739823512593.txt  Pasted-Di-seguito-trovi-una-panoramica-dei-problemi-e-delle-relative-soluzioni-per-ciascuno-degli-aspetti-s-1739309092646.txt  Pasted-Django-Django-is-a-high-level-Python-web-framework-that-is-widely-used-for-building-robust-web-appl-1739245463942.txt  Pasted-Ecco-un-esempio-di-codice-per-arbitraggio-triangolare-triangular-arbitrage-su-exchange-crypto--1739896577357.txt  Pasted-Ecco-un-layout-sample-per-la-dashboard-di-AurumBot-presupponendo-sia-un-bot-per-trading-gestio-1739899341705.txt  Pasted-Ecco-una-selezione-di-strumenti-dall-Awesome-DeepSeek-Integration-https-github-com-deepseek-ai-a-1739891467584.txt  Pasted-Ecco-una-versione-migliorata-della-classe-TradingDashboard-con-i-suggerimenti-forniti-python-impo-1739918753014.txt  Pasted-Given-the-persistent-issues-with-the-Streamlit-server-configuration-here-are-some-strategic-paths-y-1739919456099.txt  Pasted-I-bot-di-trading-menzionati-nei-risultati-di-ricerca-hanno-win-rate-tasso-di-vincita-varia-1739832124552.txt  Pasted-Il-codice-che-hai-fornito-ben-strutturato-e-utilizza-librerie-come-Streamlit-Plotly-e--1739833381769.txt  Pasted-Il-codice-che-hai-fornito-rappresenta-una-buona-struttura-per-un-applicazione-di-trading-automatizza-1739917559280.txt  Pasted-Il-problema-di-Connection-failed-with-status-502-indica-che-Replit-non-riesce-a-raggiungere-il-1739885617069.txt  Pasted-Il-tuo-codice-rappresenta-una-applicazione-Streamlit-altamente-complessa-e-ben-strutturata-per-una-p-1739918374464.txt  Pasted-Ok-vediamo-di-risolvere-i-problemi-uno-per-uno-1-Il-test-di-riconnessione-fallisce--1739308821003.txt  Pasted-Per-aumentare-la-potenza-dei-trade-e-la-frequenza-delle-operazioni-fino-al-raggiungimento-del-tu-1739353552501.txt  Pasted-Per-creare-un-bot-di-trading-che-determini-automaticamente-la-strategia-pi-profittevole-tra-le--1739834562026.txt  Pasted-Per-raggiungere-il-tuo-obiettivo-di-50-000-entro-il-1-giugno-2025-ecco-una-strategia-avanza-1739352615541.txt  Pasted-Per-rendere-operativo-un-bot-di-trading-automatico-devi-seguire-alcuni-passaggi-chiave-Ecco-un-app-1739917651407.txt  Pasted-Per-risolvere-questi-problemi-e-garantire-il-massimo-delle-prestazioni-di-AurumBot-seguiamo-una-str-1739560938112.txt  Pasted-Real-time-market-data-si-riferisce-a-dati-finanziari-o-di-mercato-che-vengono-aggiornati-istantaneam-1739917956096.txt  Pasted-Se-Streamlit-ti-sta-dando-problemi-e-vuoi-un-alternativa-dipende-da-cosa-vuoi-ottenere-Ecco-alcune-1739283044361.txt  Pasted-Thank-you-for-the-overview-of-your-trading-dashboard-application-Here-s-how-I-can-assist-you-based--1739920994138.txt  (+6 more)
backup/: BACKUP_LOG.md  main.py
components/: chat.py  (+1 more)
(+481 files in other folders)
