[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "anthropic>=0.45.2",
    "bcrypt>=4.2.1",
    "beautifulsoup4==4.13.3",
    "ccxt>=4.4.57",
    "discord-py>=2.4.0",
    "joblib==1.4.2",
    "keras>=2.14.0",
    "lightgbm==4.5.0",
    "newsapi-python>=0.2.7",
    "numpy>=2.2.2",
    "openai==1.61.1",
    "pandas>=2.2.3",
    "plotly==6.0.0",
    "praw==7.8.1",
    "psycopg2-binary==2.9.10",
    "pyserum==0.5.0a0",
    "pytest>=8.3.4",
    "python-binance==1.0.19",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy>=1.15.1",
    "solana==0.25.1",
    "solana-sdk==0.25.6",
    "sqlalchemy==2.0.38",
    "streamlit>=1.42.0",
    "telethon==1.38.1",
    "tensorflow==2.14.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "tweepy==4.15.0",
    "twilio==9.4.1",
    "websocket-client==1.7.0",
    "xgboost==2.1.4",
    "yfinance==0.2.52",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
